# fixathon-josie

./: .gitignore  Dockerfile  README.md  TEST_RESULTS.md  app.py  deploy.sh  gemini_agent.py  main.py  prompts.yaml  pyproject.toml  requirements.txt  sample.py  test_audio_integration.py  tts_generator.py  visionai-0.0.5-py3-none-any.whl  visual_desc.py
