[project]
name = "norrsken"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "google-cloud-vision>=3.11.0",
    "google-genai>=1.53.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "vertexai>=1.71.1",
    "pillow>=12.0.0",
]
